@@ -31,22 +31,21 @@ import roart.util.SparkUtil;
 
 public class MLClassifySparkAccess extends MLClassifyAccess {
 
-	private Logger log = LoggerFactory.getLogger(this.getClass());
+    private Logger log = LoggerFactory.getLogger(this.getClass());
 
-	protected SparkSession spark;
-	
-	private MyMyConfig conf;
-	
+    protected SparkSession spark;
+
+    private MyMyConfig conf;
+
     private Map<String, Model> modelMap = new HashMap<>();
     private Map<String, Double> accuracyMap = new HashMap<>();
-    
-	public MLClassifySparkAccess(MyMyConfig conf) {
+
+    public MLClassifySparkAccess(MyMyConfig conf) {
         this.conf = conf;
         findModels();	
         String sparkmaster = conf.getMLSparkMaster();
-        //sparkmaster = MyPropertyConfig.instance().sparkMaster;
         spark = SparkUtil.createSparkSession(sparkmaster, "Stockstat ML");
-	}
+    }
 
 
     private void findModels() {
@@ -63,10 +62,7 @@ public class MLClassifySparkAccess extends MLClassifyAccess {
     @Override
     public Double learntest(Aggregator indicator, Map<double[], Double> map, MLClassifyModel model, int size, String period,
             String mapname, int outcomes) {
-        //List<MLModel> models = model.getModels();
-        //for (MLModel modelInt : models) {
-       return learntestInner(map, model, size, period, mapname, outcomes);       
-    //}
+        return learntestInner(map, model, size, period, mapname, outcomes);       
     }
 
     @Override
@@ -78,40 +74,19 @@ public class MLClassifySparkAccess extends MLClassifyAccess {
     public Map<String, Double[]> classify(Aggregator indicator, Map<String, double[]> map, MLClassifyModel model, int size,
             String period, String mapname, int outcomes, Map<Double, String> shortMap) {
         Map<Integer, Map<String, Double[]>> retMap = new HashMap<>();
-        //List<MLModel> models = getModels();
-        //for (MLModel modelInt : models) {
-         return classifyInner(map, new Integer(model.getId()), size, period, mapname, outcomes, shortMap);
-        //}
-        //return retMap;
+        return classifyInner(map, Integer.valueOf(model.getId()), size, period, mapname, outcomes, shortMap);
     }
 
     @Override
     public List<MLClassifyModel> getModels() {
         return models;
     }
-    
+
     public Map<String, Double[]> classifyInner(Map<String, double[]> map, int modelInt, int size, String period, String mapname, int outcomes, Map<Double, String> shortMap) {
         long time0 = System.currentTimeMillis();
-        //List<double[]> arrList = new ArrayList<>();
-        //arrList.add(array);
         Map<String, Double[]> retMap = new HashMap<>();
         Dataset<Row> data = SparkUtil.createDFfromMap2(spark, map);
         try {
-            /*
-            List<Row> jrdd = Arrays.asList(
-                    RowFactory.create(content));
-
-            String schemaString = "sentence";
-
-            // Generate the schema based on the string of schema
-            List<StructField> fields = new ArrayList<>();
-            for (String fieldName : schemaString.split(" ")) {
-                StructField field = DataTypes.createStructField(fieldName, DataTypes.StringType, true);
-                fields.add(field);
-            }
-            StructType schema = DataTypes.createStructType(fields);
-             */
-            //Dataset<Row> sentenceDF = spark.createDataFrame(jrdd, schema);
             Model model = modelMap.get(modelInt+period+mapname);
             if (model == null) {
                 return retMap;
@@ -123,32 +98,25 @@ public class MLClassifySparkAccess extends MLClassifyAccess {
                 Double predict = row.getAs("prediction");
                 Double prob = null;
                 if (IndicatorMACD.LOGISTICREGRESSION == modelInt) {
-                try {
-                    DenseVector probvector = row.getAs("probability");
-                    double[] probarray = probvector.values();
-                    prob = probarray[predict.intValue()];
-                } catch (Exception e) {
-                    log.error(Constants.EXCEPTION, e);
+                    try {
+                        DenseVector probvector = row.getAs("probability");
+                        double[] probarray = probvector.values();
+                        prob = probarray[predict.intValue()];
+                    } catch (Exception e) {
+                        log.error(Constants.EXCEPTION, e);
+                    }
                 }
-                }
-            //Map<Double, String> label = conf.labelsMap.get(language);
-            //String cat = label.get(predict);
-             //  log.info(" cat " + predict);
-            //MachineLearningClassifyResult result = new MachineLearningClassifyResult();
-            //result.result = cat;
                 Double[] retVal = new Double[2];
                 retVal[0] = predict;
                 retVal[1] = prob;
-                String label = shortMap.get(predict);
                 retMap.put(id, retVal);
             }
-            //System.out.println("classed " + retMap.values());
             log.info("classify done");
             return retMap;
         } catch (Exception e) {
             log.error(Constants.EXCEPTION, e);
         } finally {
-            log.info("time classify model " + modelInt + " " + period + " " + map.size() + " " + (System.currentTimeMillis() - time0));            
+            log.info("time classify model {} {} {} {}", modelInt, period, map.size(), (System.currentTimeMillis() - time0));            
         }
         return null;
     }
@@ -164,13 +132,13 @@ public class MLClassifySparkAccess extends MLClassifyAccess {
         }
         Map<Double, Long> counts =
                 map.values().stream().collect(Collectors.groupingBy(e -> e, Collectors.counting()));       
-        log.info("learning distribution " + counts);
+        log.info("learning distribution {}", counts);
         try {
             Dataset<Row> data = SparkUtil.createDFfromMap(spark, map);
             Dataset<Row>[] splits = data.randomSplit(new double[]{0.6, 0.4}, 1234);
             Dataset<Row> train = splits[0];
             Dataset<Row> test = splits[1];
-            log.info("data size " + map.size() + " " + train.count());
+            log.info("data size {} {}", map.size(), train.count());
             if (train.count() == 0) {
                 train = data;
                 test = data;
@@ -181,30 +149,26 @@ public class MLClassifySparkAccess extends MLClassifyAccess {
             modelMap.put(mlmodel.getId()+period+mapname, model);
             // compute accuracy on the test set                                         
             Dataset<Row> result = model.transform(test);
-            //result.schema().toString();
-            //result.show();
             Dataset<Row> predictionAndLabels = result.select("prediction", "label");
-            //predictionAndLabels.show();
             MulticlassClassificationEvaluator evaluator = new MulticlassClassificationEvaluator()
                     .setMetricName("accuracy");
             double eval = evaluator.evaluate(predictionAndLabels);
-            log.info("Test set accuracy for " + mapname + " " + mlmodel.getId() + " " + period + " = " + eval);
+            log.info("Test set accuracy for {} {} {} = {}", mapname, mlmodel.getId(), period, eval);
             accuracyMap.put(mlmodel.getId()+period+mapname, eval);
             accuracy = eval;
 
         } catch (Exception e) {
             log.error("Exception", e);
         } finally {
-            log.info("time learn test model " + mlmodel.getName() + " " + period + " " + map.size() + " " + (System.currentTimeMillis() - time0));
+            log.info("time learn test model {} {} {} {}",mlmodel.getName(), period, map.size(),(System.currentTimeMillis() - time0));
         }
         return accuracy;
     }
-    
+
     public Double evalInner(int modelInt, String period, String mapname) {
-        //System.out.println("str vs " + modelStr+period+mapname + " :" + accuracyMap.keySet());
         return accuracyMap.get(modelInt+period+mapname);
     }
-    
+
     @Override
     public String getName() {
         return ConfigConstants.SPARK;
