@@ -1,31 +1,22 @@
 package roart.predictor;
 
-import java.text.DecimalFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.math3.util.Pair;
 
-import com.tictactec.ta.lib.MInteger;
-
-import roart.config.ConfigConstantMaps;
 import roart.config.MyMyConfig;
-import roart.db.DbAccess;
-import roart.db.DbDao;
-import roart.db.DbSpark;
 import roart.ml.MLPredictDao;
 import roart.ml.MLPredictModel;
 import roart.model.LearnTestPredict;
-import roart.model.ResultItemTable;
 import roart.model.ResultItemTableRow;
 import roart.model.StockItem;
 import roart.pipeline.PipelineConstants;
@@ -35,8 +26,6 @@ import roart.util.Constants;
 import roart.util.MarketData;
 import roart.util.PeriodData;
 import roart.util.StockDao;
-//import roart.util.TaUtil;
-import scala.collection.mutable.WrappedArray;
 
 public class PredictorLSTM extends Predictor {
 
@@ -57,7 +46,6 @@ public class PredictorLSTM extends Predictor {
     @Override
     public Map<Integer, List<ResultItemTableRow>> otherTables() {
         Map<Integer, List<ResultItemTableRow>> retMap = new HashMap<>();
-        List<ResultItemTable> otherTables = new ArrayList<>();
         if (mlTimesTableRows != null) {
             retMap.put(ControlService.MLTIMES, mlTimesTableRows);
         }
@@ -101,12 +89,12 @@ public class PredictorLSTM extends Predictor {
         calculate(conf, marketdatamap, periodDataMap, category);        
     }
 
-    private abstract class PredSubType {
+    private interface PredSubType {
         public abstract  String getType();
         public abstract  String getName();
     }
 
-    private class PredSubTypeFull extends PredSubType {
+    private class PredSubTypeFull implements PredSubType {
         @Override
         public String getType() {
             return "F";
@@ -117,7 +105,7 @@ public class PredictorLSTM extends Predictor {
         }
     }
 
-    private class PredSubTypeSingle extends PredSubType {
+    private class PredSubTypeSingle implements PredSubType {
         @Override
         public String getType() {
             return "S";
@@ -159,10 +147,10 @@ public class PredictorLSTM extends Predictor {
     private void makeWantedSubTypes() {
         wantedSubTypes.add(new PredSubTypeSingle());
     }
+    
     // TODO make an oo version of this
     private void calculate(MyMyConfig conf, Map<String, MarketData> marketdatamap,
             Map<String, PeriodData> periodDataMap, int category) throws Exception {
-        DbAccess dbDao = DbDao.instance(conf);
         SimpleDateFormat dt = new SimpleDateFormat(Constants.MYDATEFORMAT);
         String dateme = dt.format(conf.getdate());
         long time0 = System.currentTimeMillis();
@@ -174,154 +162,91 @@ public class PredictorLSTM extends Predictor {
 
         }
         if (!anythingHere(listMap)) {
-            System.out.println("empty"+key);
+            log.info("empty {}", key);
             return;
         }
-        log.info("time0 " + (System.currentTimeMillis() - time0));
+        log.info("time0 {}", (System.currentTimeMillis() - time0));
         resultMap = new HashMap<>();
 
         long time2 = System.currentTimeMillis();
-        //objectMap = dbDao.doCalculationsArr(conf, listMap, key, null /*this*/, conf.wantPercentizedPriceIndex());
-        //System.out.println("imap " + objectMap.size());
-        log.info("time2 " + (System.currentTimeMillis() - time2));
+        log.info("time2 {}", (System.currentTimeMillis() - time2));
         long time1 = System.currentTimeMillis();
-        //TaUtil tu = new TaUtil();
-        String market = conf.getMarket();
-        String periodstr = key;
-        PeriodData perioddata = periodDataMap.get(periodstr);
-        log.info("listmap " + listMap.size() + " " + listMap.keySet());
-        // a map from subtype h/m + maptype com/neg/pos to a map<values, label>
-        Map<String, Map<double[], Double>> mapMap = new HashMap<>();
-        // System.out.println("allids " + listMap.size());
-        //Map<String, List<Double[]>> splits = new HashMap<>();
+        log.info("listmap {} {}", listMap.size(), listMap.keySet());
         for (String id : listMap.keySet()) {
-            //Object[] objs = objectMap.get(id);
-            //Double[] momentum = tu.getMomAndDelta(conf.getMACDDeltaDays(), conf.getMACDHistogramDeltaDays(), objs);
-            //momMap.put(id, momentum);
-            Map<String, List<Double>> retMap = new HashMap<>();
-            //Object[] full = tu.getMomAndDeltaFull(list, conf.getDays(), conf.isMACDDeltaEnabled(), conf.getMACDDeltaDays(), conf.isMACDHistogramDeltaEnabled(), conf.getMACDHistogramDeltaDays());
-
-            //Double[] list = ArraysUtil.getArrayNonNullReverse(listMap.get(id));
             double[][] list0 = truncListMap.get(id);
             double[] list = list0[0];
-            log.info("listsize"+ list.length);
-            // TODO do not need?
-            if (conf.wantPercentizedPriceIndex()) {
-                //list = ArraysUtil.getPercentizedPriceIndex(list, key);
-            }
-            //log.info("beg end " + id + " "+ begOfArray.value + " " + endOfArray.value);
-            //System.out.println("beg end " + begOfArray.value + " " + endOfArray.value);
-            log.info("list " + list.length + " " + Arrays.asList(list));
+            log.info("list {} {}", list.length, Arrays.asList(list));
         }
-        // map from h/m to model to posnegcom map<model, results>
-        //Map<PredSubType, Map<MLModel2, Map<String, Map<String, Double[]>>>> mapResult = new HashMap<>();
         Map<String, LearnTestPredict> mapResult = new HashMap<>();
         if (conf.wantML()) {
-            try {
-                List<PredSubType> subTypes = wantedSubTypes();
-                for (PredSubType subType : subTypes) {
-                    for (MLPredictDao mldao : mldaos) {
-                        //System.out.println("mapget " + mapName + " " + mapMap.keySet());
-                        //Map<double[], Double> map = mapMap.get(mapName);
-                        for (String id : listMap.keySet()) {
-                            // TODO configure file
-                            int horizon = conf.getPredictorLSTMHorizon();
-                            int windowsize = conf.getPredictorLSTMWindowsize();
-                            int epochs = conf.getPredictorLSTMEpochs();
-                            double[][] list0 = truncListMap.get(id);
-                            double[] list = list0[0];
-                            // TODO check reverse. move up before if?
-                            //list = ArraysUtil.getArrayNonNullReverse(list);
-                            log.info("bla " + list.length + " " + windowsize);
-                            if (list != null && list.length > 2 * windowsize ) {
-                                Map map = null;
-                                String mapName = null;
-                                List next = null;
-                                Double[] list3 = ArrayUtils.toObject(list);
-                                LearnTestPredict result = mldao.learntestpredict(this, list3, next, map, null, conf.getMACDDaysBeforeZero(), key, mapName, 4, mapTime, windowsize, horizon, epochs);  
-                                mapResult.put(id, result);
-                            }
+            doPredictions(conf, mapResult);
+        }
+        createResultMap(conf, mapResult);
+        log.info("time1 {}", (System.currentTimeMillis() - time1));
+        handleSpentTime(conf);
+
+    }
+
+    private void doPredictions(MyMyConfig conf, Map<String, LearnTestPredict> mapResult) {
+        try {
+            List<PredSubType> subTypes = wantedSubTypes();
+            for (PredSubType subType : subTypes) {
+                for (MLPredictDao mldao : mldaos) {
+                    for (String id : listMap.keySet()) {
+                        // TODO configure file
+                        int horizon = conf.getPredictorLSTMHorizon();
+                        int windowsize = conf.getPredictorLSTMWindowsize();
+                        int epochs = conf.getPredictorLSTMEpochs();
+                        double[][] list0 = truncListMap.get(id);
+                        double[] list = list0[0];
+                        // TODO check reverse. move up before if?
+                        log.info("list {} {}", list.length, windowsize);
+                        if (list != null && list.length > 2 * windowsize ) {
+                            Map map = null;
+                            String mapName = null;
+                            List next = null;
+                            Double[] list3 = ArrayUtils.toObject(list);
+                            LearnTestPredict result = mldao.learntestpredict(this, list3, next, map, null, conf.getMACDDaysBeforeZero(), key, mapName, 4, mapTime, windowsize, horizon, epochs);  
+                            mapResult.put(id, result);
                         }
                     }
                 }
-            } catch (Exception e) {
-                log.error("Exception", e);
             }
-            // calculate sections and do ML
-            // a map from h/m + com/neg/sub to map<id, values>
-            // map from h/m + posnegcom to map<model, results>
-            List<PredSubType> subTypes = wantedSubTypes();
-            for (PredSubType subType : subTypes) {
-                Map<MLPredictModel, Map<String, Map<String, Double[]>>> mapResult1 = new HashMap<>();
-                for (MLPredictDao mldao : mldaos) {
-                    // map from posnegcom to map<id, result>
-                    Map<String, Map<String, Double[]>> mapResult2 = new HashMap<>();
-                    for (MLPredictModel model : mldao.getModels()) {
-                    }
-                }
-                //mapResult.put(subType, mapResult1);
-            }
+        } catch (Exception e) {
+            log.error("Exception", e);
         }
-        List<Map> maplist = new ArrayList<>();
-        log.info("here00");
+    }
+
+    private void createResultMap(MyMyConfig conf, Map<String, LearnTestPredict> mapResult) {
         for (String id : listMap.keySet()) {
             Object[] fields = new Object[1];
             resultMap.put(id, fields);
             int retindex = 0;
-            log.info("here0");
             if (conf.wantML()) {
-                log.info("here1");
-                //int momidx = 6;
-                Double[] type;
                 List<PredSubType> subTypes2 = wantedSubTypes();
                 for (PredSubType subType : subTypes2) {
-                    //Map<MLModel2, Map<String, Map<String, Double[]>>> mapResult1 = mapResult.get(subType);
-                    log.info("here11");
-                    //System.out.println("mapget " + subType + " " + mapResult.keySet());
                     for (MLPredictDao mldao : mldaos) {
-                        log.info("here111");
                         for (MLPredictModel model : mldao.getModels()) {
-                            log.info("here1111");
-                            //Map<String, Map<String, Double[]>> mapResult2 = mapResult1.get(model);
-                            //for (int mapTypeInt : getMapTypeList()) {
-                            //String mapType = mapTypes.get(mapTypeInt);
-                            //Map<String, Double[]> mapResult3 = mapResult2.get(mapType);
-                            //String mapName = subType.getType() + mapType;
-                            //System.out.println("fields " + fields.length + " " + retindex);
                             retindex = mldao.addResults(fields, retindex, id, model, this, mapResult, null);
-                            //}
                         }   
                     }
                 }
             }
         }
-        log.info("time1 " + (System.currentTimeMillis() - time1));
-        // and others done with println
-        if (conf.wantOtherStats()) {
-        }
+    }
+
+    private void handleSpentTime(MyMyConfig conf) {
         if (conf.wantMLTimes()) {
-            //Map<MLModel2, Long> mapTime = new HashMap<>();
-            for (MLPredictModel model : mapTime.keySet()) {
+            for (Entry<MLPredictModel, Long> entry : mapTime.entrySet()) {
+                MLPredictModel model = entry.getKey();
                 ResultItemTableRow row = new ResultItemTableRow();
                 row.add(key);
                 row.add(model.getEngineName());
                 row.add(model.getName());
-                row.add(mapTime.get(model));
+                row.add(entry.getValue());
                 mlTimesTableRows.add(row);
             }
         }
-
-    }
-
-    private boolean anythingHere2(Map<String, Double[]> listMap2) {
-        for (Double[] array : listMap2.values()) {
-            for (int i = 0; i < array.length; i++) {
-                if (array[i] != null) {
-                    return true;
-                }
-            }
-        }
-        return false;
     }
 
     private boolean anythingHere(Map<String, Double[][]> listMap2) {
@@ -344,12 +269,6 @@ public class PredictorLSTM extends Predictor {
         eventTableRows.add(event);
     }
 
-    public static void printout(Double[] type, String id, Map<Double, String> labelMapShort) {
-        if (type != null) {
-            //System.out.println("Type " + labelMapShort.get(type[0]) + " id " + id);
-        }
-    }
-
     @Override
     public Object calculate(Double[] array) {
         return null;
@@ -370,20 +289,13 @@ public class PredictorLSTM extends Predictor {
         String periodstr = key;
         PeriodData perioddata = periodDataMap.get(periodstr);
         if (perioddata == null) {
-            //System.out.println("key " + key + " : " + periodDataMap.keySet());
-            log.info("key " + key + " : " + periodDataMap.keySet());
+            log.info("key {} {}", key, periodDataMap.keySet());
         }
-        //double momentum = resultMap.get(id);
         Object[] result = null;
         if (resultMap != null) {
             result = resultMap.get(id);
         }
         if (result == null) {
-            /*
-            Double[] i = resultMap.values().iterator().next();
-            int size = i.length;
-            momentum = new Double[size];
-             */
             result = emptyField;
         }
         return result;
@@ -397,15 +309,10 @@ public class PredictorLSTM extends Predictor {
         List<PredSubType> subTypes = wantedSubTypes();
         for (PredSubType subType : subTypes) {
             for (MLPredictDao mldao : mldaos) {
-                //for (int mapTypeInt : getMapTypeList()) {
-                //String mapType = mapTypes.get(mapTypeInt);
-                //String mapName = subType.getType() + mapType;
                 retindex = mldao.addTitles(objs, retindex, this, title, key, subType.getType());
-                //}
             }
         }
-        //emptyField = new Double[size];
-        log.info("fieldsizet " + retindex);
+        log.info("fieldsizet {}", retindex);
         return objs;
     }
 
@@ -420,14 +327,14 @@ public class PredictorLSTM extends Predictor {
             }
         }
         emptyField = new Object[size];
-        log.info("fieldsizet " + size);
+        log.info("fieldsizet {}", size);
         return size;
     }
 
     public static void mapAdder(Map<MLPredictModel, Long> map, MLPredictModel key, Long add) {
         Long val = map.get(key);
         if (val == null) {
-            val = new Long(0);
+            val = Long.valueOf(0);
         }
         val += add;
         map.put(key, val);
